<resources>
    <string name="app_name">pregunta4-login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reservas">Reservas</string>
    <string name="recibos">Recibos</string>
    <string name="reparaciones">Reparaciones</string>
    <string name="personal">Personal</string>

    <string name="register_title">Registro de Usuario</string>
    <string name="nombre_hint">Nombres</string>
    <string name="dni_hint">DNI</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="contrasena_hint">Contraseña</string>
    <string name="rol_hint">Rol (número)</string>
    <string name="register">Registrarse</string>

    <string-array name="roles_array">
        <item>Limpieza</item>
        <item>Seguridad</item>
    </string-array>
</resources>